--- %YAML:1.0
- version: 2.0.9
  date: 2004-05-22
  changes:
    - Improved RDoc.  Ri documentation is auto-installed now!

- version: 2.0.8
  date: 2004-05-22
  changes:
    - First scan of the glyphs() method only scans for pre|notextile|code, the
      deeper passes scan for all HTML.  Now inlines work around HTML tags!
      (What a pain!)
    - Moved tables and blocks into glyphs to keep them shielded from the parser
      if they are in <pre> tags.
    - Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps
      only once.  Thanks, David!

- version: 2.0.7
  date: 2004-04-21
  changes:
    - New REFERENCE and QUICK-REFERENCE.  See http://hobix.com/textile/.
    - Lists rewritten to accomplish better line folding.
    - Better, greedier links.
    - Additional link and list tests.

- version: 2.0.6
  date: 2004-04-16
  changes:
    - Bold and strong tags were mixed up.  '*' is now strong.  '**' is bold.
      They were swapped until now.
    - Horizontal alignments were pretty buggy.  Combining alignments with
      indents was totally broken.
    - Fixed table problem.  Now glyphs are handled between tables and blocks.
    - Nested <pre> and <code> tags are now escaped.  Much better handling of
      HTML inside <pre> tags.  Really: quite nice.
    - Patch from Florian Gross to fix an html filtration inconsistency.

- version: 2.0.5
  date: 2004-04-14
  changes: 
    - Added safe mode (patch courtesy of Florian Gross).
    - Added line folding (suggested by Jim Menard).
    - Fixing notextile tags to work multi-line.
    - Ambiguity with em-dash and block opener.
    - Footnote bug. (Thanks, Jim Menard!)

- version: 2.0.4
  date: 2004-04-08
  changes:
    - Scaled back aggresiveness of the inline matching to aid the em-dash.
    - Scaled back footnotes to stay out of array indices.

- version: 2.0.3
  date: 2004-04-02
  changes:
    - Handling of pre, code, notextile was all wrong.  Also, got rid of the goofed up